--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -26,6 +26,7 @@ on:
       - "autobuild*"  # for developers: branches starting with autobuild will be built and evaluated on each push
       - "autobuild/*" # for developers: branches starting with autobuild will be built and evaluated on each push
       - "master"
+      - "dtinth"
     #  - "*"
   pull_request: # The branches below must be a subset of the branches in "push"
     branches:
@@ -92,29 +93,37 @@ jobs:
       fail-fast:                    false
       matrix: # Think of this like a foreach loop. Basically runs the steps with every combination of the contents of this. More info: https://docs.github.com/en/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
         config:
-           - config_name:           AndroidAPK (artifact+codeQL)
-             target_os:             android
-             building_on_os:        ubuntu-20.04
-             cmd1_prebuild:         "sh ./autobuild/android/autobuild_apk_1_prepare.sh" # this step needs sh instead of bash for permissions
-             cmd2_build:            "./autobuild/android/autobuild_apk_2_build.sh"
-             cmd3_postbuild:        "./autobuild/android/autobuild_apk_3_copy_files.sh"
-             uses_codeql:           true
+          #  - config_name:           AndroidAPK (artifact+codeQL)
+          #    target_os:             android
+          #    building_on_os:        ubuntu-20.04
+          #    cmd1_prebuild:         "sh ./autobuild/android/autobuild_apk_1_prepare.sh" # this step needs sh instead of bash for permissions
+          #    cmd2_build:            "./autobuild/android/autobuild_apk_2_build.sh"
+          #    cmd3_postbuild:        "./autobuild/android/autobuild_apk_3_copy_files.sh"
+          #    uses_codeql:           true
 
-           - config_name:           Linux (artifacts+codeQL)
+          #  - config_name:           Linux (artifacts+codeQL)
+          #    target_os:             linux
+          #    building_on_os:        ubuntu-18.04
+          #    cmd1_prebuild:         "sh ./autobuild/linux/autobuild_deb_1_prepare.sh" # this step needs sh instead of bash for permissions
+          #    cmd2_build:            "./autobuild/linux/autobuild_deb_2_build.sh"
+          #    cmd3_postbuild:        "./autobuild/linux/autobuild_deb_3_copy_files.sh"
+          #    uses_codeql:           true
+
+           - config_name:           Linux (artifacts)
              target_os:             linux
              building_on_os:        ubuntu-18.04
              cmd1_prebuild:         "sh ./autobuild/linux/autobuild_deb_1_prepare.sh" # this step needs sh instead of bash for permissions
              cmd2_build:            "./autobuild/linux/autobuild_deb_2_build.sh"
              cmd3_postbuild:        "./autobuild/linux/autobuild_deb_3_copy_files.sh"
-             uses_codeql:           true
+             uses_codeql:           false
 
-           - config_name:           MacOS (codeQL)
-             target_os:             macos
-             building_on_os:        macos-10.15
-             cmd1_prebuild:         "./autobuild/mac/codeQL/autobuild_mac_1_prepare.sh 5.15.2"
-             cmd2_build:            "./autobuild/mac/codeQL/autobuild_mac_2_build.sh"
-             cmd3_postbuild:        false
-             uses_codeql:           true
+          #  - config_name:           MacOS (codeQL)
+          #    target_os:             macos
+          #    building_on_os:        macos-10.15
+          #    cmd1_prebuild:         "./autobuild/mac/codeQL/autobuild_mac_1_prepare.sh 5.15.2"
+          #    cmd2_build:            "./autobuild/mac/codeQL/autobuild_mac_2_build.sh"
+          #    cmd3_postbuild:        false
+          #    uses_codeql:           true
 
            - config_name:           MacOS (artifacts)
              target_os:             macos
@@ -124,29 +133,37 @@ jobs:
              cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh"
              uses_codeql:           false
 
-           - config_name:           MacOS Legacy (artifacts)
-             target_os:             macos
-             building_on_os:        macos-10.15
-             cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh 5.9.9"
-             cmd2_build:            "./autobuild/mac/artifacts/autobuild_mac_2_build.sh do_not_sign"
-             cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh legacy"
-             uses_codeql:           false
+          #  - config_name:           MacOS Legacy (artifacts)
+          #    target_os:             macos
+          #    building_on_os:        macos-10.15
+          #    cmd1_prebuild:         "./autobuild/mac/artifacts/autobuild_mac_1_prepare.sh 5.9.9"
+          #    cmd2_build:            "./autobuild/mac/artifacts/autobuild_mac_2_build.sh do_not_sign"
+          #    cmd3_postbuild:        "./autobuild/mac/artifacts/autobuild_mac_3_copy_files.sh legacy"
+          #    uses_codeql:           false
 
-           - config_name:           Windows (artifact+codeQL)
+          #  - config_name:           Windows (artifact+codeQL)
+          #    target_os:             windows
+          #    building_on_os:        windows-latest
+          #    cmd1_prebuild:         powershell .\autobuild\windows\autobuild_windowsinstaller_1_prepare.ps1
+          #    cmd2_build:            powershell .\autobuild\windows\autobuild_windowsinstaller_2_build.ps1
+          #    cmd3_postbuild:        powershell .\autobuild\windows\autobuild_windowsinstaller_3_copy_files.ps1
+          #    uses_codeql:           true
+
+           - config_name:           Windows (artifact)
              target_os:             windows
              building_on_os:        windows-latest
              cmd1_prebuild:         powershell .\autobuild\windows\autobuild_windowsinstaller_1_prepare.ps1
              cmd2_build:            powershell .\autobuild\windows\autobuild_windowsinstaller_2_build.ps1
              cmd3_postbuild:        powershell .\autobuild\windows\autobuild_windowsinstaller_3_copy_files.ps1
-             uses_codeql:           true
-
-           - config_name:           Windows JACK (artifact)
-             target_os:             windows
-             building_on_os:        windows-latest
-             cmd1_prebuild:         powershell .\autobuild\windows\autobuild_windowsinstaller_1_prepare.ps1 -BuildOption jackonwindows
-             cmd2_build:            powershell .\autobuild\windows\autobuild_windowsinstaller_2_build.ps1 -BuildOption jackonwindows
-             cmd3_postbuild:        powershell .\autobuild\windows\autobuild_windowsinstaller_3_copy_files.ps1 -BuildOption jackonwindows
              uses_codeql:           false
+
+          #  - config_name:           Windows JACK (artifact)
+          #    target_os:             windows
+          #    building_on_os:        windows-latest
+          #    cmd1_prebuild:         powershell .\autobuild\windows\autobuild_windowsinstaller_1_prepare.ps1 -BuildOption jackonwindows
+          #    cmd2_build:            powershell .\autobuild\windows\autobuild_windowsinstaller_2_build.ps1 -BuildOption jackonwindows
+          #    cmd3_postbuild:        powershell .\autobuild\windows\autobuild_windowsinstaller_3_copy_files.ps1 -BuildOption jackonwindows
+          #    uses_codeql:           false
 
     runs-on:                        ${{ matrix.config.building_on_os }}
     steps:
