[dtinth] Add some junk to deb package version number, so they can be upgraded easily
When building on GitHub Actions, `fetch-depth` has been set to `0`
so that the total number of commits in the history of the branch
can be determined correctly.

--- a/.github/workflows/autobuild.yml
+++ b/.github/workflows/autobuild.yml
@@ -181,6 +181,7 @@ jobs:
         uses:                       actions/checkout@v2
         with:
           submodules:               true
+          fetch-depth:              0
 
       # Prepare (install QT & dependencies)
       - name:                       "Prepare for ${{ matrix.config.config_name }}"
